Fixed hero image overlap.

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -25,6 +25,7 @@ p, li {
 
 #hero {
 	width: 100%;
+	margin-top: 25px;
 }
 
 #slogan {
